--- a/index.html
+++ b/index.html
@@ -23,30 +23,34 @@
     </div>
 
     <main>
-      <div id="clock">youtube video</div>
+      <!-- <embed id="clock" src="http://orig07.deviantart.net/3a29/f/2012/053/b/d/countdown_clock_by_rapiermedia-d4qmion.swf" allowscriptaccess="never" width="480" height="360" quality="high" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer"> -->
       <div id="toppanel">
-        <table>
-         <tbody>
-           <tr>
-             <td id="topnum1"></td>
-             <td id="topnum2"></td>
-             <td id="topnum3"></td>
-             <td id="topnum4"></td>
-             <td id="topnum5"></td>
-             <td id="topnum6"></td>
-           </tr>
-         </tbody>
-       </table>
-     </div>
+       <ul>
+         <li class = "topnums" id="topnum1"></li>
+         <li class = "topnums" id="topnum2"></li>
+         <li class = "topnums" id="topnum3"></li>
+         <li class = "topnums" id="topnum4"></li>
+         <li class = "topnums" id="topnum5"></li>
+         <li class = "topnums" id="topnum6"></li>
+         <button class="buttons" id="clearbutton">CLEAR</button>
+       </ul>
+      </div>
 
-     <div id="answerpanel">
-      <button id="bigbutton">BIG NUMBERS</button>
-      <button id="smallbutton">SMALL NUMBERS</button>
-      <div id="targetbox"></div>
-      <button id="targetbutton">TARGET</button>
-      <button id="solvebutton">SOLVE</button>
-    </div>
+      <div id="targetpanel">
+        <button class="buttons" id="bigbutton">BIG <br> NUMBERS</button>
+        <button class="buttons"  id="smallbutton">SMALL NUMBERS</button>
+        <div id="targetbox"></div>
+        <button class="buttons" id="solvebutton">SOLVE</button>
+        <button class="buttons" id="targetbutton">TARGET</button>
+      </div>
+      <div id="solvepanel">
+        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
+      </div>
   </main>
-
 </body>
 </html>
