--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
 
       <div id="solvepanel">
         <div id="timer">
-          <div id="screen">30</div>
+          <div id="screen"></div>
         </div>
         <div id="answer"></div>
       </div>      
