--- a/home.html
+++ b/home.html
@@ -9,12 +9,15 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Hammersmith+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
+  <audio id="soundclip" preload="auto">
+     <source src="media/clocksound.mp3"></source>
+  </audio>
 </script>
 
 </head>
 <body>
   <div id="leftpanel">
-    <img id="logo" src="images/logo.jpg">
+    <img id="logo" src="media/logo.jpg">
     <h2>INSTRUCTIONS</h2>
     <ol>
       <p>Start by picking your numbers. Click 'SMALL' for a small number and 'BIG' for a big number until all 6 tiles are filled.</p>
