--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
 
       <div id="solvepanel">
         <div id="timer">
-          <div id="screen"></div>
+          <div id="screen">BIG OR SMALL?</div>
         </div>
         <div id="answer"></div>
       </div>      
